<resources>
    <string name="app_name">Desafio1</string>
    <string name="ingresar">INGRESAR</string>
    <string name="contrase_a">Contraseña</string>
    <string name="usuario">Usuario</string>
    <string name="registro">Registro</string>
    <string name="password1">Ingrese contraseña</string>
    <string name="password2">Reingrese contraseña</string>
    <string name="ingresar_edad">Ingresar edad</string>
    <string name="nombre_usuario">Nombre de usuario</string>
    <string name="femenino">Femenino</string>
    <string name="masculino">Masculino</string>
    <string name="ingrese_un_e_mail">Ingrese un E-mail</string>
    <string name="registrarse">Registrarse</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
</resources>
